tests/samples/negative/types/array_literal_expected_non_array.ax
module array_literal_expected_non_array;

fn main() -> i32 {
    let values: i32 = [1, 2];
    return values;
}
